<resources>
    <string name="app_name">Rejestracja</string>
    <string name="rejestracja">REJESTRACJA</string>
    <string name="utworz_nowe_konto">Utworz nowe konto</string>
    <string name="imie">Imie</string>
    <string name="wpisz_imie">Wpisz imie</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="wpisz_nazwisko">Wpisz nazwisko</string>
    <string name="email">Email</string>
    <string name="wpisz_email">Wpisz email</string>
    <string name="haslo">Haslo</string>
    <string name="wpisz_haslo">Wpisz haslo</string>
    <string name="zarejestruj">Zarejestruj</string>
</resources>